# world-model-mcp

./: .env.example  .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml  setup.sh
src/verify_action_mcp/: server.py  world_model.py
src/verify_action_mcp/prompts/: android.py  mcp.py  os.py  search.py  swe.py  terminal.py  web.py
tests/: test_world_model.py
