[project]
name = "verify-action-mcp"
version = "0.2.0"
description = "World-model-assisted agent self-verification MCP server — predict the outcome of consequential actions before executing them"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Haseeb Asif", email = "m.haseebasif5@gmail.com" }]
keywords = ["mcp", "world-model", "agent", "claude-code", "llm"]
dependencies = [
    "mcp>=1.28.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/haseebasif/verify-action-mcp"
Repository = "https://github.com/haseebasif/verify-action-mcp"

[project.scripts]
verify-action-mcp = "verify_action_mcp.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verify_action_mcp"]
